--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -1,4 +1,4 @@
-/* This is CSS for Responsive Portfolio-Index */
+/* This is CSS for Responsive Portfolio-Contact */
 
 /* Background pattern from Toptal Subtle Patterns */
 body {
@@ -17,34 +17,9 @@ a:hover {
     color: rgb(39, 170, 170);
 }
 
-/* About Me */
 
-.container {
-    padding-top: 50px;
-    padding-bottom: 130px;
-}
 
-#aboutme {
-    font-family: 'Playfair Display', serif;
-    color: rgb(39, 170, 170);
-}
 
-.aboutme {
-    padding: 40px;
-}
-
-.aboutme img[src="./assets/images/img.png"] {
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    float: left;
-    max-width: 250px;
-    height: auto;
-}
-
-.p {
-    padding: 10px;
-}
 
 /* Footer */
 #footer {
@@ -69,6 +44,3 @@ a:hover {
     text-align: center;
     font-size: 20px;
 }
-
-
-
