--- a/assets/css/style-portfolio.css
+++ b/assets/css/style-portfolio.css
@@ -1,4 +1,4 @@
-/* This is CSS for Responsive Portfolio-Index */
+/* This is CSS for Responsive Portfolio-Portfolio */
 
 /* Background pattern from Toptal Subtle Patterns */
 body {
@@ -17,33 +17,35 @@ a:hover {
     color: rgb(39, 170, 170);
 }
 
-/* About Me */
-
+/* Portfolio */
 .container {
     padding-top: 50px;
     padding-bottom: 130px;
+    max-width: fit-content;
 }
-
-#aboutme {
+#portfolio {
     font-family: 'Playfair Display', serif;
     color: rgb(39, 170, 170);
 }
 
-.aboutme {
+.portfolio{
     padding: 40px;
 }
 
-.aboutme img[src="./assets/images/img.png"] {
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    float: left;
-    max-width: 250px;
+.portfolio-1,.portfolio-2,.portfolio-3,.portfolio-4,.portfolio-5 {
+    max-width: 200px;
     height: auto;
 }
 
-.p {
-    padding: 10px;
+.portfolio-1,.portfolio-3,.portfolio-5 {
+    padding-top: 20px;
+    padding-right: 20px;
+}
+.portfolio-2, .portfolio-4 {
+    padding-top: 20px;
+}
+.portfolio-5 {
+    padding-bottom: 30px;
 }
 
 /* Footer */
@@ -69,6 +71,3 @@ a:hover {
     text-align: center;
     font-size: 20px;
 }
-
-
-
