Modified HTML, CSS files. Changed 2 images in index and porfolio HTML files.

--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -17,9 +17,21 @@ a:hover {
     color: rgb(39, 170, 170);
 }
 
+/* Contact */
 
+.container {
+    padding-top: 50px;
+    padding-bottom: 130px;
+    min-width: 590px;
+}
 
-
+.contact {
+    padding: 30px;
+}
+#contact {
+    font-family: 'Playfair Display', serif;
+    color: rgb(39, 170, 170);
+}
 
 /* Footer */
 #footer {
