Finished README.md, further modified HTML and CSS.

--- a/assets/css/style-contact.css
+++ b/assets/css/style-contact.css
@@ -19,7 +19,7 @@ a:hover {
 
 /* Contact */
 
-.container {
+.container-fluid {
     padding-top: 50px;
     padding-bottom: 130px;
     min-width: 590px;
