--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ a:hover {
 
 /* About Me */
 
-.container {
+.container-fluid {
     padding-top: 50px;
     padding-bottom: 130px;
     min-width: 560px;
